# x3d-mcp

./: README.md  pyproject.toml  server.py
scripts/: run_baseline.py  run_treatment.py  score_results.py  summarize.py  tasks.py
spec/: x3d-4.0.xsd
src/: animation.py  file_ops.py  generation.py  scene_manipulation.py  semantic_check.py  spec_lookup.py  tooltip_loader.py  validation.py  x3duom_loader.py
tests/: test_animation.py  test_file_ops.py  test_generation.py  test_scene_manipulation.py  test_semantic_check.py  test_spec_lookup.py  test_validation.py
wiki/: x3d-4.0.profile.xml
